# dspy-tree-of-thoughts

./: .env.example  .gitignore  CLEANUP_COMPLETE.md  OVERVIEW.md  README.md  SUMMARY.md  manage_results.py  pyproject.toml  quick_tests.py  run_all_tests.py  run_demo.py  run_tests.py  setup.sh  test.py
data/: An Exploratory Tour of DSPy_ A Framework for Programing Language Models, not Prompting _ by Jules S. Damji _ The Modern Scientist _ Medium.txt  Programming, Not Prompting_ A Hands-On Guide to DSPy _ Towards Data Science.txt  What Is DSPy_ How It Works, Use Cases, and Resources _ DataCamp.txt  What Is DSPy_ Overview, Architecture, Use Cases, and Resources - CertLibrary Blog.txt  dspy_arxiv.txt
docs/: README.md
docs/dev/: cleanup-complete.md
docs/user/: getting-started.md  overview.md  test-running-guide.md
src/dspy-tot/: README.md  __init__.py  dataset.py  demo_search_strategies.py  evaluation.py  main.py  modules.py  search_strategies.py  signatures.py  test_models.py  test_tot.py  tree_of_thought.py
src/dspy_tot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: base_test.py  common.py  queries.json  test_astar.py  test_beam.py  test_best_first.py  test_bfs.py  test_dfs.py  test_mcts.py
test/analysis/: analysis.py  comparative_analysis.py
test/results/: astar_q1.json  astar_q2.json  astar_q3.json  astar_q4.json  astar_q5.json  astar_q6.json  astar_q7.json  astar_q8.json  astar_results.json  beam_q1.json  beam_q2.json  beam_q3.json  beam_q4.json  beam_q5.json  beam_q6.json  beam_q7.json  beam_q8.json  beam_results.json  bfs_q1.json  (+35 more)
(+19 files in other folders)
