[project]
name = "dspy-tot"
version = "0.1.0"
description = "Model-agnostic Tree-of-Thought reasoning implementation using DSPy and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.3",
    "dspy-ai>=3.0.3",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [ 
    "pytest>=7.0",
    "pytest-cov>=4.0", 
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
